# c_text_rpg

./: .clang-format  .clangd  .gitignore  .neotreeignore  CMakeLists.txt  Makefile  README.md  aarch64-macos-none.cmake  forge.c  functions.c  functions.h  main.c  testc23.sh  testc99.sh
cmake/: version.cmake  zig-toolchain.cmake
make/: todo.awk
make/template/: .clangd
script/: build.sh  buildtest.sh  compile.sh  env.sh  test.sh  todolist.sh  var.sh
scripts/awk/: todo.awk
src/: character.c  character.h  const.h  forge.c  forge.h  functions.c  functions.h  main.c  weapon.h
src/character/: character.c  character.h  weapon.c  weapon.h
src/location/: location.c  location.h
src/story/: story.c  story.h
